<resources>
    <string name="app_name">w1790282_CourseWork_01</string>
    <string name="btn_car_make">Identify The Car Make</string>
    <string name="btn_identify">Identify</string>
    <string name="car_quiz">Car Quiz</string>
    <string name="hints">Hints</string>
    <string name="identify_the_car_image">Identify the Car Image</string>
    <string name="advanced_level">Advanced Level</string>
    <string name="timer">Timer</string>
    <string name="enter_letter">Enter Letter :</string>
    <string name="todo">TODO</string>
    <string name="next">Next</string>
    <string name="marks">Marks :</string>
    <string name="_0">0</string>
    <string name="name_here">Name Here</string>
    <string name="submit">Submit</string>
</resources>