<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#EBFFFD"
    android:orientation="vertical"
    tools:context=".HintActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_timer_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="24sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/txt_user_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textSize="24sp"

            />

        <TextView
            android:id="@+id/textView_car_make_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:textColor="#FFC107"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView_car_hint"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView_guess_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="left"
                android:text="@string/enter_letter"
                android:textSize="24sp"
                android:layout_marginStart="10dp"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/txtEdit_letter"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:maxLength="1"
                android:textSize="24sp"
                android:layout_marginEnd="40dp"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24sp"
            android:text="@string/submit"
            app:backgroundTint="#39A59B" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>