<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBFFFD"
    tools:context=".AdvancedLevelActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/marks"
                android:textSize="24sp"
                android:gravity="right"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView_marks_advance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:text="@string/_0"
                android:textSize="24sp"
                tools:ignore="RtlHardcoded"
                android:layout_marginEnd="20dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_timer_advance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:textSize="24sp"
            tools:ignore="RtlHardcoded"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/textView_result_advance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_advance_1"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:scaleType="fitXY"
                    tools:ignore="MissingConstraints"
                    android:contentDescription="@string/todo" />

                <EditText
                    android:id="@+id/editText_advace_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="#B8EDE8"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/name_here"
                    android:textSize="18sp"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/textView_advance_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#39A59B"
                    android:textColor="#FFEB3B"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_advance_2"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:scaleType="fitXY"
                    tools:ignore="MissingConstraints"
                    android:contentDescription="@string/todo" />

                <EditText
                    android:id="@+id/editText_advace_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="#B8EDE8"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/name_here"
                    android:textSize="18sp"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/textView_advance_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#39A59B"
                    android:textColor="#FFEB3B"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_advance_3"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:scaleType="fitXY"
                    tools:ignore="MissingConstraints"
                    android:contentDescription="@string/todo" />

                <EditText
                    android:id="@+id/editText_advace_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="#B8EDE8"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/name_here"
                    android:textSize="18sp"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/textView_advance_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#39A59B"
                    android:textColor="#FFEB3B"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_submit_advance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/submit"
            android:textSize="24sp"
            app:backgroundTint="#39A59B"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>